--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "history": "^2.0.0-rc2",
+    "backbone": "^1.2.3",
+    "backbone.marionette": "^2.4.4",
+    "jquery": "^2.2.1",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-router": "^2.0.0-rc5"
+    "react-dom": "^0.14.6"
   },
   "repository": {
     "type": "git",
